--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,15 @@
-name: deploy
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches:
       - main
-    # 如果你想要进一步定义触发、路径以及其他内容，请检阅 Github Actions 文档
-    # https://docs.github.com/zh/actions/using-workflows/workflow-syntax-for-github-actions#on
+    # Review gh actions docs if you want to further define triggers, paths, etc
+    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#on
 
 jobs:
   build:
-    name: 构建 Docusaurus
+    name: Build Docusaurus
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -18,34 +18,34 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
+          cache: pnpm
 
-      - name: 安装依赖
-        run: yarn install --frozen-lockfile
-      - name: 构建网站
-        run: yarn build
+      - name: Install dependencies
+        run: pnpm install
+      - name: Build website
+        run: pnpm build
 
-      - name: 上传构建制品
+      - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: build
 
   deploy:
-    name: 部署到 GitHub Pages
+    name: Deploy to GitHub Pages
     needs: build
 
-    # 给予 GITHUB_TOKEN 进行 Pages 部署所必须的权限
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write # 以部署到 Pages
-      id-token: write # 以验证部署来自恰当的源
+      pages: write # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
 
-    # 部署到 Github Pages 环境
+    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     runs-on: ubuntu-latest
     steps:
-      - name: 部署到 GitHub Pages
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
